Fix for table on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -31,6 +31,10 @@
     font-size: 5rem
 }
 
+.table-mobile {
+    overflow-x: auto
+}
+
 .footer {
     padding: 3rem 1.5rem
 }
